--- a/bazy-danych-projekt/webapp/app/views/db/tasks/new.html.haml
+++ b/bazy-danych-projekt/webapp/app/views/db/tasks/new.html.haml
@@ -1,4 +1,2 @@
-= simple_form_for @task, :url => tasks_path do |f|
-  = f.input :name
-  .actions
-    = f.submit :class => "btn primary"
+= simple_form_for @task, :url => project_tasks_path(@project) do |f|
+  = render :partial => "form"
