--- a/bazy-danych-projekt/webapp/app/views/db/tasks/show.html.haml
+++ b/bazy-danych-projekt/webapp/app/views/db/tasks/show.html.haml
@@ -1,4 +1,4 @@
 %h2= @task.name
 
-= link_to "Edit", edit_task_path(@task), :class => "btn"
-= link_to "Delete", task_path(@task), :method => :delete, :class => "btn danger"
+= link_to "Edit", edit_project_task_path(@project, @task), :class => "btn"
+= link_to "Delete", project_task_path(@project, @task), :method => :delete, :class => "btn danger"
