--- a/bazy-danych-projekt/webapp/app/views/db/projects/edit.html.haml
+++ b/bazy-danych-projekt/webapp/app/views/db/projects/edit.html.haml
@@ -1,2 +1,2 @@
 = simple_form_for @project, :url => project_path(@project) do |f|
-  = render :partial => "form"
+  = render :partial => "form", :locals => {:f => f}
