--- a/bazy-danych-projekt/webapp/app/views/db/milestones/edit.html.haml
+++ b/bazy-danych-projekt/webapp/app/views/db/milestones/edit.html.haml
@@ -1,2 +1,2 @@
 = simple_form_for @milestone, :url => project_milestone_path(@project, @milestone) do |f|
-  = render :partial => "form"
+  = render :partial => "form", :locals => {:f => f}
