--- a/bazy-danych-projekt/webapp/app/views/db/milestones/_form.html.haml
+++ b/bazy-danych-projekt/webapp/app/views/db/milestones/_form.html.haml
@@ -1,3 +1,6 @@
 = f.input :name
+= f.input :description
+= f.input :deadline, input_html => { :class => 'dateBox' }
+= f.input :project, :as => :select
 .actions
   = f.submit :class => "btn primary"
