--- a/bazy-danych-projekt/webapp/app/views/db/projects/_form.html.haml
+++ b/bazy-danych-projekt/webapp/app/views/db/projects/_form.html.haml
@@ -1,3 +1,5 @@
-= f.input :name
+= f.input :name	
+= f.input :description
+= f.input :owner, :as => :select
 .actions
   = f.submit :class => "btn primary"
