--- a/bazy-danych-projekt/webapp/app/views/db/tasks/_form.html.haml
+++ b/bazy-danych-projekt/webapp/app/views/db/tasks/_form.html.haml
@@ -1,3 +1,9 @@
 = f.input :name
+= f.input :description
+= f.input :user, :as => :select
+= f.input :deadline, :input_html => { :class => 'dateBox' }
+= f.input :estimatedTime
+= f.input :project, :as => :select
+= f.input :kind, :as => :select
 .actions
   = f.submit :class => "btn primary"
