--- a/bazy-danych-projekt/webapp/app/views/db/tasks/new.html.haml
+++ b/bazy-danych-projekt/webapp/app/views/db/tasks/new.html.haml
@@ -1,2 +1,5 @@
+= debug @task
+= debug @project
+
 = simple_form_for @task, :url => project_tasks_path(@project) do |f|
   = render :partial => "form", :locals => {:f => f}
