--- a/bazy-danych-projekt/webapp/app/views/db/projects/_form.html.haml
+++ b/bazy-danych-projekt/webapp/app/views/db/projects/_form.html.haml
@@ -1,5 +1,5 @@
 = f.input :name
-= f.input :description
-/= f.input :owner, :as => :select
+= f.input :description, :as => :text
+= f.input :owner, :as => :select, :collection => Db::User.all.map {|u| [u.email, u.id]}
 .actions
   = f.submit :class => "btn primary"
