--- a/bazy-danych-projekt/webapp/app/views/db/projects/show.html.haml
+++ b/bazy-danych-projekt/webapp/app/views/db/projects/show.html.haml
@@ -19,7 +19,7 @@
 
 %h3 Tasks
 %ul
-  - @project.tasks.each do |task|
+  - @project.tasks_without_milestone.each do |task|
     %li= link_to task.name, project_task_path(@project, task.id)
 
 
