Fix styles problems

--- a/bazy-danych-projekt/webapp/app/views/layouts/application.html.haml
+++ b/bazy-danych-projekt/webapp/app/views/layouts/application.html.haml
@@ -38,6 +38,11 @@
         color : #fff;
         padding: 8px 20px 12px;
       }
+      .actions{
+        background : #fff;
+        border : none;
+        width : 650px;
+      }
 		
     
 %body
