--- a/bazy-danych-projekt/webapp/app/views/db/milestones/show.html.haml
+++ b/bazy-danych-projekt/webapp/app/views/db/milestones/show.html.haml
@@ -13,10 +13,8 @@ for project
 = link_to "Edit", edit_project_milestone_path(@project, @milestone), :class => "btn"
 = link_to "Delete", project_milestone_path(@project, @milestone), :method => :delete, :class => "btn danger"
 
-Tasks
-%ul
-  - @milestone.tasks.each do |task|
-    %li= link_to task.name, project_task_path(@project, task.id)
+%h3 Tasks
+= render "shared/tasks", :locals => {:tasks => @milestone.tasks, :show_milestone => false, :show_assignee => true}
 
 
 = link_to "Add task", new_project_task_path(@project, :milestone_id => @milestone.id), :class => "btn success"
