--- a/bazy-danych-projekt/webapp/app/views/db/projects/show.html.haml
+++ b/bazy-danych-projekt/webapp/app/views/db/projects/show.html.haml
@@ -18,9 +18,6 @@
 
 
 %h3 Tasks
-%ul
-  - @project.tasks_without_milestone.each do |task|
-    %li= link_to task.name, project_task_path(@project, task.id)
-
+= render "shared/tasks", :locals => {:tasks => @project.tasks_without_milestone, :show_assignee => true}
 
 = link_to "Add task", new_project_task_path(@project), :class => "btn success"
