--- a/bazy-danych-projekt/webapp/app/views/layouts/application.html.haml
+++ b/bazy-danych-projekt/webapp/app/views/layouts/application.html.haml
@@ -12,16 +12,16 @@
         background-color: #eee;
       }
       body {
-        padding-top: 40px; 
+        padding-top: 40px;
       }
       .container > footer p {
-        text-align: center; 
+        text-align: center;
       }
       .container {
         width: 820px;
       }
 
-      
+
       .content {
         background-color: #fff;
         padding: 20px;
@@ -43,14 +43,20 @@
         border : none;
         width : 650px;
       }
-		
-    
+
+      tr.success .txt {
+        text-decoration: line-through;
+      }
+
+
 %body
   .topbar
     .fill
       .container
         %ul.nav
-          %li= link_to "Projects", projects_path, :class => "brand"
+          %li= link_to "PMS ( :P )", root_path, :class => "brand"
+          %li= link_to "Projects", projects_path
+          %li= link_to "Users", users_path
         .pull-right.header-text
           - if signed_in?
             Hello #{current_user.email}
@@ -59,9 +65,9 @@
   .container
     .content
       .page-header
-        %h1 Project Management System      
+        %h1 Project Management System
       .row
-        .span16 
+        .span16
           .notice= notice
           .alert= alert
           = yield
