--- a/bazy-danych-projekt/webapp/app/views/db/tasks/show.html.haml
+++ b/bazy-danych-projekt/webapp/app/views/db/tasks/show.html.haml
@@ -1,7 +1,3 @@
-= debug @project.get_tasks.to_a
-
-= debug Db::Task.all.to_a
-
 %h2= @task.name
 
 - if @task.assignee
@@ -19,3 +15,16 @@
 
 = link_to "Edit", edit_project_task_path(@project, @task), :class => "btn"
 = link_to "Delete", project_task_path(@project, @task), :method => :delete, :class => "btn danger"
+
+%h3 Comments
+%div
+  - @task.comments.each do |comment|
+    %div
+      %div
+        by
+        = link_to comment.author.name, user_path(comment.author)
+      %div= simple_format comment.content
+
+%h3 New comment
+= simple_form_for @new_comment, :url => project_task_comments_path(@task.project, @task) do |f|
+  = render "shared/new_comment", :f => f
