--- a/bazy-danych-projekt/webapp/app/views/db/users/index.html.haml
+++ b/bazy-danych-projekt/webapp/app/views/db/users/index.html.haml
@@ -1,15 +1,16 @@
 %h2 Listing users
 
-%table
-  %tr
-    %th Name
-    %th Projects
-    %th Tasks
-
-  - @users.each do |user|
+.table-width
+  %table
     %tr
-      %td= link_to user.name, user_path(user)
-      %td= user.projects.size
-      %td= user.tasks.size
+      %th Name
+      %th Projects
+      %th Tasks
+
+    - @users.each do |user|
+      %tr
+        %td= link_to user.name, user_path(user)
+        %td= user.projects.size
+        %td= user.tasks.size
 
 = link_to "Add new user", new_user_path, :class => "btn success"
