--- a/bazy-danych-projekt/webapp/app/views/db/projects/show.html.haml
+++ b/bazy-danych-projekt/webapp/app/views/db/projects/show.html.haml
@@ -1,27 +1,42 @@
 %h2= @project.name
 
 .owner
-  Owner:
-  = @project.owner.email
-.description= @project.description
+  Owner :
+  = link_to @project.owner.name, user_path(@project.owner)
+.description
+  Description : 
+  = @project.description
 
+%br
 = link_to "Edit", edit_project_path(@task), :class => "btn"
 = link_to "Delete", project_path(@task), :method => :delete, :class => "btn danger"
 
-
+%br
+%br
 %h3 Milestones
-%ul
-  - @project.milestones.each do |milestone|
-    %li= link_to milestone.name, project_milestone_path(@project, milestone.id)
+.table-width
+  %table
+    %tr
+      %th Name
+      %th Description
+      %th Deadline
+
+    - @project.milestones.each do |milestone|
+      %tr
+        %td= link_to milestone.name, project_milestone_path(@project, milestone.id)
+        %td= milestone.description
+        %td= l(Date.parse(milestone.deadline.to_s), :format => :long)
 
 = link_to "Add milestone", new_project_milestone_path(@project), :class => "btn success"
 
-
+%br
+%br
 %h3 Tasks
 = render "shared/tasks", :locals => {:tasks => @project.tasks_without_milestone, :show_assignee => true}
 
 = link_to "Add task", new_project_task_path(@project), :class => "btn success"
-
+%br
+%br
 %h3 Comments
 %div
   - @project.comments.each do |comment|
@@ -30,7 +45,8 @@
         by
         = link_to comment.author.name, user_path(comment.author)
       %div= simple_format comment.content
-
+%br
+%br
 %h3 New comment
 = simple_form_for @new_comment, :url => project_comments_path(@project) do |f|
   = render "shared/new_comment", :f => f
