--- a/bazy-danych-projekt/webapp/app/views/layouts/application.html.haml
+++ b/bazy-danych-projekt/webapp/app/views/layouts/application.html.haml
@@ -3,6 +3,7 @@
   %head
     %title Webapp
     = stylesheet_link_tag "http://twitter.github.com/bootstrap/1.4.0/bootstrap.min.css"
+    = stylesheet_link_tag "http://ajax.googleapis.com/ajax/libs/jqueryui/1.8.16/themes/base/jquery-ui.css" 
     = stylesheet_link_tag    "application"
     = javascript_include_tag "application"
     = csrf_meta_tags
