--- a/bazy-danych-projekt/webapp/app/views/db/tasks/show.html.haml
+++ b/bazy-danych-projekt/webapp/app/views/db/tasks/show.html.haml
@@ -28,3 +28,18 @@
 %h3 New comment
 = simple_form_for @new_comment, :url => project_task_comments_path(@task.project, @task) do |f|
   = render "shared/new_comment", :f => f
+
+
+
+%h3 Attachments
+%div
+  - @task.attachments.each do |attachment|
+    %div
+      %div= link_to attachment.get_file, attachment.file_url
+      %div
+        by
+        = link_to attachment.author.name, user_path(attachment.author)
+
+%h3 New attachment
+= simple_form_for @new_attachment, :url => project_task_attachments_path(@task.project, @task) do |f|
+  = render "shared/new_attachment", :f => f
