--- a/bazy-danych-projekt/webapp/app/views/layouts/application.html.haml
+++ b/bazy-danych-projekt/webapp/app/views/layouts/application.html.haml
@@ -6,6 +6,7 @@
     = stylesheet_link_tag "http://ajax.googleapis.com/ajax/libs/jqueryui/1.8.16/themes/base/jquery-ui.css" 
     = stylesheet_link_tag    "application"
     = javascript_include_tag "application"
+    = javascript_include_tag "twitter.github.com/bootstrap/1.4.0/bootstrap-tabs.js"
     = csrf_meta_tags
     :css
       #container { width: 800px; padding: 20px; }
