--- a/bazy-danych-projekt/webapp/app/views/db/tasks/show.html.haml
+++ b/bazy-danych-projekt/webapp/app/views/db/tasks/show.html.haml
@@ -1,45 +1,55 @@
 %h2= @task.name
+.table-width
+  %ul{:class => "tabs", :"data-tabs" => "tabs"}
+    %li{:class => "active"} 
+      %a{:href => "#info"}Info
+    %li
+      %a{:href => "#comment"}Comment
+    %li
+      %a{:href => "#attachment"}Attachment
 
-- if @task.assignee
-  %h4
-    Assignee:
-    = link_to @task.assignee.name, user_path(@task.assignee)
+  .tab-content
+    .active#info
+      - if @task.assignee
+        %h4
+          Assignee:
+          = link_to @task.assignee.name, user_path(@task.assignee)
 
-- if @task.milestone
-  %h4
-    Milestone:
-    = link_to @task.milestone.name, project_milestone_path(@project, @task.milestone)
-%h4
-  Project:
-  = link_to @task.project.name, project_path(@task.project)
+      - if @task.milestone
+        %h4
+          Milestone:
+          = link_to @task.milestone.name, project_milestone_path(@project, @task.milestone)
+      %h4
+        Project:
+        = link_to @task.project.name, project_path(@task.project)
 
-= link_to "Edit", edit_project_task_path(@project, @task), :class => "btn"
-= link_to "Delete", project_task_path(@project, @task), :method => :delete, :class => "btn danger"
-
-%h3 Comments
-%div
-  - @task.comments.each do |comment|
-    %div
+      = link_to "Edit", edit_project_task_path(@project, @task), :class => "btn"
+      = link_to "Delete", project_task_path(@project, @task), :method => :delete, :class => "btn danger"
+    #comment.tab-pane
+      %h3 Comments
       %div
-        by
-        = link_to comment.author.name, user_path(comment.author)
-      %div= simple_format comment.content
+        - @task.comments.each do |comment|
+          %div
+            %div
+              by
+              = link_to comment.author.name, user_path(comment.author)
+            %div= simple_format comment.content
 
-%h3 New comment
-= simple_form_for @new_comment, :url => project_task_comments_path(@task.project, @task) do |f|
-  = render "shared/new_comment", :f => f
+      %h3 New comment
+      = simple_form_for @new_comment, :url => project_task_comments_path(@task.project, @task) do |f|
+        = render "shared/new_comment", :f => f
 
 
-
-%h3 Attachments
-%div
-  - @task.attachments.each do |attachment|
-    %div
-      %div= link_to attachment.get_file, attachment.file_url
+    #attachment.tab-pane
+      %h3 Attachments
       %div
-        by
-        = link_to attachment.author.name, user_path(attachment.author)
+        - @task.attachments.each do |attachment|
+          %div
+            %div= link_to attachment.get_file, attachment.file_url
+            %div
+              by
+              = link_to attachment.author.name, user_path(attachment.author)
 
-%h3 New attachment
-= simple_form_for @new_attachment, :url => project_task_attachments_path(@task.project, @task) do |f|
-  = render "shared/new_attachment", :f => f
+      %h3 New attachment
+      = simple_form_for @new_attachment, :url => project_task_attachments_path(@task.project, @task) do |f|
+        = render "shared/new_attachment", :f => f
