--- a/bazy-danych-projekt/webapp/app/views/db/users/_form.html.haml
+++ b/bazy-danych-projekt/webapp/app/views/db/users/_form.html.haml
@@ -1,5 +1,6 @@
 = f.input :email
 = f.input :first_name
 = f.input :last_name
+= f.input :role, :as => :select, :collection => Db::RoleType.values.to_a.map {|e| e.to_s.humanize }, :selected => @user.role.to_s.humanize
 .actions
   = f.submit :class => "btn primary"
