--- a/bazy-danych-projekt/webapp/app/views/db/milestones/index.html.haml
+++ b/bazy-danych-projekt/webapp/app/views/db/milestones/index.html.haml
@@ -5,6 +5,6 @@
   - @milestones.each do |mileston|
     %li= link_to mileston.name, project_milestone_path(@project, mileston.id)
 
-
-= link_to "Create new milestone", new_project_milestone_path(@project), :class => "btn success"
+- if current_user.can_edit_milestone
+  = link_to "Create new milestone", new_project_milestone_path(@project), :class => "btn success"
 
