--- a/bazy-danych-projekt/webapp/app/views/db/projects/index.html.haml
+++ b/bazy-danych-projekt/webapp/app/views/db/projects/index.html.haml
@@ -12,5 +12,5 @@
         %td= link_to project.name, project_path(project.id)
         %td= link_to project.owner.name, user_path(project.owner)
         %td= project.description
-
-= link_to "Create new project", new_project_path, :class => "btn success"
+- if current_user.can_edit_project
+  = link_to "Create new project", new_project_path, :class => "btn success"
