--- a/bazy-danych-projekt/webapp/app/views/db/users/show.html.haml
+++ b/bazy-danych-projekt/webapp/app/views/db/users/show.html.haml
@@ -1,7 +1,7 @@
 %h2= @user.name
-
-= link_to "Edit", edit_user_path(@user), :class => "btn"
-= link_to "Delete", user_path(@user), :remote => true, :method => :delete, :class => "btn danger"
+- if current_user.can_edit_user
+  = link_to "Edit", edit_user_path(@user), :class => "btn"
+  = link_to "Delete", user_path(@user), :remote => true, :method => :delete, :class => "btn danger"
 
 %h3 Tasks
 = render "shared/tasks", :locals => {:tasks => @user.tasks, :show_milestone => true, :show_assignee => false }
