--- a/bazy-danych-projekt/webapp/app/views/db/tasks/_form.html.haml
+++ b/bazy-danych-projekt/webapp/app/views/db/tasks/_form.html.haml
@@ -8,6 +8,6 @@
 / = f.input :kind, :as => :select
 = f.input :kind, :as => :select, :collection => Db::TaskKind.values.to_a.map {|e| e.to_s.humanize }, :selected => @task.kind.to_s.humanize
 = f.input :status, :as => :select, :collection => Db::TaskStatus.values.to_a.map {|e| e.to_s.humanize }, :selected => @task.status.to_s.humanize
-= f.input :assignee, :as => :select, :collection => Db::User.all.map {|u| [u.name, u.id]}, :selected => @task.assignee.try(:id)
+= f.input :assignee, :as => :select, :collection => @project.all_users.map {|u| [u.name, u.id]}, :selected => @task.assignee.try(:id)
 .actions
   = f.submit :class => "btn primary"
