--- a/bazy-danych-projekt/webapp/app/views/db/users/show.html.haml
+++ b/bazy-danych-projekt/webapp/app/views/db/users/show.html.haml
@@ -3,6 +3,11 @@
   = link_to "Edit", edit_user_path(@user), :class => "btn"
   = link_to "Delete", user_path(@user), :remote => true, :method => :delete, :class => "btn danger"
 
+%h3 In projects:
+%ul
+  - @user.projects.each do |project|
+    %li= link_to project.name, project_path(project)
+
 %h3 Tasks
 = render "shared/tasks", :locals => {:tasks => @user.tasks, :show_milestone => true, :show_assignee => false }
 
