--- a/bazy-danych-projekt/webapp/app/views/layouts/application.html.haml
+++ b/bazy-danych-projekt/webapp/app/views/layouts/application.html.haml
@@ -3,10 +3,11 @@
   %head
     %title Webapp
     = stylesheet_link_tag "http://twitter.github.com/bootstrap/1.4.0/bootstrap.min.css"
-    = stylesheet_link_tag "http://ajax.googleapis.com/ajax/libs/jqueryui/1.8.16/themes/base/jquery-ui.css" 
+    = stylesheet_link_tag "http://puna.net.nz/client/css/redmond/jquery-ui-1.7.2.custom.css" 
     = stylesheet_link_tag    "application"
     = javascript_include_tag "application"
     = javascript_include_tag "http://twitter.github.com/bootstrap/1.4.0/bootstrap-tabs.js"
+    = javascript_include_tag "http://puna.net.nz/client/timepicker/js/timepicker.mod.js"
     = csrf_meta_tags
     :css
       #container { width: 800px; padding: 20px; }
