--- a/bazy-danych-projekt/webapp/app/assets/stylesheets/style.css
+++ b/bazy-danych-projekt/webapp/app/assets/stylesheets/style.css
@@ -10,7 +10,7 @@ body {
 	border: 15px solid #ddd;
     -webkit-border-radius: 5px;
     -moz-border-radius: 5px;
-    border-radius: 5px;  
+    border-radius: 5px;
 }
 
 .gantt:after {
@@ -55,15 +55,15 @@ body {
 	border-bottom: 1px solid #DDD;
 	background-color: #f6f6f6;
 }
- 
+
 .fn-gantt .leftPanel .name {
 	width: 110px;
 }
- 
+
 .fn-gantt .leftPanel .desc {
 	width: 115px;
 }
- 
+
 .fn-gantt .spacer
 {
 	margin: -2px 0 1px 0;
@@ -87,7 +87,7 @@ body {
 	border-left: 1px solid #DDD;
 	border-bottom: 1px solid #DDD;
 	margin: -1px 0 0 -1px;
-} 
+}
 
 .fn-gantt .hollyday {
 	background-color: #f9e5e2;
@@ -121,7 +121,7 @@ body {
 	border-bottom: 1px solid #DDD;
 	height: 23px;
 	margin: 0 0 0 -1px;
-	background-color: #f6f6f6; 	
+	background-color: #f6f6f6;
 }
 
 .fn-gantt-hint {
@@ -129,7 +129,7 @@ body {
 	background-color: #fff5d4;
     -webkit-border-radius: 4px;
     -moz-border-radius: 4px;
-    border-radius: 4px; 
+    border-radius: 4px;
     padding: 10px;
 	position: absolute;
 	display: none;
@@ -140,7 +140,7 @@ body {
 	border: none;
     -webkit-border-radius: 3px;
     -moz-border-radius: 3px;
-    border-radius: 3px;   
+    border-radius: 3px;
     background-color: #89c5f8;
     height: 18px;
     margin: 4px 3px 3px 3px;
@@ -196,12 +196,12 @@ body {
 }
 
 .fn-gantt .navigate .nav-page-back {
-	background-image: url(img/buttons.png);
+	background-image: url(buttons.png);
 	background-position: 0 0;
 }
 
 .fn-gantt .navigate .nav-page-next {
-	background-image: url(img/buttons.png);
+	background-image: url(buttons.png);
 	background-position: -50px 0;
 	margin-right: 15px;
 }
@@ -215,32 +215,32 @@ body {
 }
 
 .fn-gantt .navigate .nav-begin {
-	background-image: url(img/buttons.png);
+	background-image: url(buttons.png);
 	background-position: -70px 0;
 }
 
 .fn-gantt .navigate .nav-prev-week {
-	background-image: url(img/buttons.png);
+	background-image: url(buttons.png);
 	background-position: -90px 0;
 }
 
 .fn-gantt .navigate .nav-prev-day {
-	background-image: url(img/buttons.png);
+	background-image: url(buttons.png);
 	background-position: -110px 0;
 }
 
 .fn-gantt .navigate .nav-next-day {
-	background-image: url(img/buttons.png);
+	background-image: url(buttons.png);
 	background-position: -130px 0;
 }
 
 .fn-gantt .navigate .nav-next-week {
-	background-image: url(img/buttons.png);
+	background-image: url(buttons.png);
 	background-position: -150px 0;
 }
 
 .fn-gantt .navigate .nav-end {
-	background-image: url(img/buttons.png);
+	background-image: url(buttons.png);
 	background-position: -170px 0;
 }
 
