--- a/bazy-danych-projekt/webapp/app/views/db/milestones/_form.html.haml
+++ b/bazy-danych-projekt/webapp/app/views/db/milestones/_form.html.haml
@@ -1,6 +1,6 @@
 = f.input :name
 = f.input :description, :as => :text
-= f.input :deadline, :input_html => { :class => 'dateBox' }
+= f.input :deadline, :input_html => { :class => 'dateBox', :value => DateTime.parse(@task.deadline.to_s).strftime("%m/%d/%Y %H:%M") }
 / = f.input :project, :as => :select
 .actions
   = f.submit :class => "btn primary"
