--- a/bazy-danych-projekt/webapp/app/views/db/tasks/show.html.haml
+++ b/bazy-danych-projekt/webapp/app/views/db/tasks/show.html.haml
@@ -41,7 +41,7 @@
               %td= link_to time.user.name, user_path(time.user) 
               %td= time.start_time
               %td= time.end_time
-              %td=  distance_of_time_in_words(Date.parse(time.start_time.to_s), Date.parse(time.end_time.to_s)) 
+              %td= distance_of_time_in_words(Time.at(time.start_time.get_time/1000.0), Time.at(time.end_time.get_time/1000.0))
       %h3 New time entry
       = simple_form_for @new_timeentry, :url => project_task_time_entries_path(@task.project, @task) do |f|
         = render "time_entry", :f => f  
