--- a/webapp/app/views/layouts/application.html.haml
+++ b/webapp/app/views/layouts/application.html.haml
@@ -1,10 +1,18 @@
 !!!
-%html
+%html(lang="en")
   %head
-    %title Mandelbrot
-    = stylesheet_link_tag    "application", :media => "all"
+    %meta(charset="utf-8")
+    %title= title_helper
+    = stylesheet_link_tag "application", :media => "all"
     = javascript_include_tag "application"
     = csrf_meta_tags
   %body
-    =yield
+    = render "layouts/navbar"
+    .container
+      = yield
+
+
+    = javascript_include_tag "leaflet"
+
+
 
