--- a/webapp/app/assets/stylesheets/layout.css.sass
+++ b/webapp/app/assets/stylesheets/layout.css.sass
@@ -1,9 +1,20 @@
+$background: #eee
+
 body
   padding-top: 60px
   padding-bottom: 40px
+  background-color: $background
+
+h1
+  margin-bottom: 10px
+
+.content
+  background-color: white
+  padding: 20px
+  @include box-shadow(darken($background, 20%) 1px 1px 3px)
+  @include border-radius(5px, 5px)
 
 #fractal
-  @include border-radius(5px, 5px)
   height: 400px
 
 
