--- a/webapp/app/views/layouts/_navbar.html.haml
+++ b/webapp/app/views/layouts/_navbar.html.haml
@@ -4,7 +4,7 @@
       = link_to "Fractal Explorer", root_path, :class => "brand"
       %ul.nav
         %li= link_to "Home", root_path
-        %li= link_to "About", "#"
+        %li= link_to "About", about_path
       %ul.nav.pull-right
         %li= link_to "Sign In", "#"
 
