--- a/webapp/app/views/layouts/application.html.haml
+++ b/webapp/app/views/layouts/application.html.haml
@@ -2,17 +2,13 @@
 %html(lang="en")
   %head
     %meta(charset="utf-8")
-    %title= title_helper
+    %title= yield :title
     = stylesheet_link_tag "application", :media => "all"
     = javascript_include_tag "application"
     = csrf_meta_tags
   %body
     = render "layouts/navbar"
     .container
-      = yield
-
-
-    = javascript_include_tag "leaflet"
-
-
+      .content
+        = yield
 
