--- a/webapp/app/views/blogs/show.html.haml
+++ b/webapp/app/views/blogs/show.html.haml
@@ -14,6 +14,7 @@
 - @blog.posts.each do |post|
   .post
     %p= post.content
+    = link_to 'Usun', blog_post_path( @blog, post ), :method => :delete 
     %hr
 
 = link_to 'Edit', edit_blog_path(@blog)
