--- a/webapp/app/views/blogs/show.html.haml
+++ b/webapp/app/views/blogs/show.html.haml
@@ -8,23 +8,26 @@
   = @blog.description
 %p
   %b User:
-  = @blog.user_id
+  = gravatar_for @blog.user 
 
 %h2 Posts
 - @blog.posts.each do |post|
   .post
     %p= post.content
-    = link_to 'Usun', blog_post_path( @blog, post ), :method => :delete 
+    - if @blog.user == current_user
+      = link_to 'Usun', blog_post_path( @blog, post ), :method => :delete 
     %hr
 
-= link_to 'Edit', edit_blog_path(@blog)
-\|
-= link_to 'Back', blogs_path
 
-.posts
-  %h3 New post
-  = simple_form_for @new_post, :url => blog_posts_path(@blog) do |f|
-    %fieldset
-      = f.input :content, :as => :text
-    .actions
-      = f.submit "Add post", :class => "btn success"
+- if @blog.user == current_user
+  .posts
+    %h3 New post
+    = simple_form_for @new_post, :url => blog_posts_path(@blog) do |f|
+      %fieldset
+        = f.input :content, :as => :text
+      .actions
+        = f.submit "Add post", :class => "btn success"
+
+  = link_to 'Edit', edit_blog_path(@blog)
+  \|
+  = link_to 'Back', blogs_path
