--- a/webapp/app/views/layouts/application.html.haml
+++ b/webapp/app/views/layouts/application.html.haml
@@ -1,6 +1,6 @@
 %html
   %head
-    %title Webapp
+    %title Microblogs
     = stylesheet_link_tag "http://twitter.github.com/bootstrap/1.4.0/bootstrap.min.css"
     = stylesheet_link_tag    "application"
     = javascript_include_tag "application"
